[Harish] : Adds controller layer for adding post to read later
