# docs/swagger.json
@@ -522,14 +522,14 @@
         },
         "/api/post/v1/post/comment": {
             "post": {
-                "description": "get all interests or search a interest with keyword",
+                "description": "comment on a post",
                 "consumes": [
                     "application/json"
                 ],
                 "tags": [
-                    "interest"
+                    "post"
                 ],
-                "summary": "GetInterests",
+                "summary": "Comment",
                 "parameters": [
                     {
                         "description": "Request Body",
@@ -537,28 +537,16 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.SearchInterests"
+                            "$ref": "#/definitions/request.CommentPost"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/db.Interest"
-                            }
-                        }
+                        "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/golaerror.Error"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/golaerror.Error"
                         }
@@ -611,6 +599,47 @@
                     },
                     "406": {
                         "description": "Not Acceptable",
+                        "schema": {
+                            "$ref": "#/definitions/golaerror.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/golaerror.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/post/v1/post/{post_id}/read-later": {
+            "get": {
+                "description": "mark a post to read later fo user",
+                "tags": [
+                    "post"
+                ],
+                "summary": "MarkReadLater",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Post ID",
+                        "name": "post_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/golaerror.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/golaerror.Error"
                         }
